--- a/blog-application/src/main/resources/application.properties
+++ b/blog-application/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.show-sql=true
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+project.image=/image
